K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    spec.ingressClassName: "nginx"
    kubernetes.io/ingress.allow-http: "false"
spec:
  defaultBackend:
    service:
      name: backend-service
      port:
        number: 60000
  rules:
  - http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 60000
